--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,11 +19,11 @@ include_directories(${OPENGL_INCLUDE_DIR})
 
 include_directories("${PROJECT_SOURCE_DIR}/../include")
 
-file(GLOB Mango_core_src "${PROJECT_SOURCE_DIR}/core/*.cpp")
-set(Mango_core_src "${PROJECT_SOURCE_DIR}/mango.cpp" ${Mango_core_src})
-file(GLOB Mango_draw_src "${PROJECT_SOURCE_DIR}/draw/*.cpp")
-file(GLOB Mango_geometry_src "${PROJECT_SOURCE_DIR}/geometry/*.cpp")
-file(GLOB Mango_glut_src "${PROJECT_SOURCE_DIR}/glut/*.cpp")
+file(GLOB mango_core_src "${PROJECT_SOURCE_DIR}/core/*.cpp")
+set(mango_core_src "${PROJECT_SOURCE_DIR}/mango.cpp" ${mango_core_src})
+file(GLOB mango_draw_src "${PROJECT_SOURCE_DIR}/draw/*.cpp")
+file(GLOB mango_geometry_src "${PROJECT_SOURCE_DIR}/geometry/*.cpp")
+file(GLOB mango_onglut_src "${PROJECT_SOURCE_DIR}/glut/*.cpp")
 
 # Add -fPIC on 64bit machines
 if (UNIX AND NOT WIN32)
@@ -37,24 +37,24 @@ if (UNIX AND NOT WIN32)
   endif(CMAKE_UNAME)
 endif(UNIX AND NOT WIN32)
 
-add_library(Mango_core ${Mango_core_src})
-target_link_libraries(Mango_core ${OPENGL_LIBRARIES})
+add_library(mango_core ${mango_core_src} ${mango_draw_src})
+target_link_libraries(mango_core ${OPENGL_LIBRARIES})
 
-add_library(Mango_geometry ${Mango_geometry_src})
-target_link_libraries(Mango_geometry ${OPENGL_LIBRARIES})
+add_library(mango_geometry ${mango_geometry_src})
+target_link_libraries(mango_geometry ${OPENGL_LIBRARIES})
 
-add_library(Mango_draw ${Mango_draw_src})
-target_link_libraries(Mango_draw ${OPENGL_LIBRARIES})
+##add_library(mango_draw ${mango_draw_src})
+##target_link_libraries(mango_draw ${OPENGL_LIBRARIES})
 
-## Mango_on_GLUT is optional
+## mango_onglut is optional
 
 find_package(GLUT)
 if(${GLUT_FOUND})
   include_directories(${GLUT_INCLUDE_DIR})
-  add_library(Mango_glut ${Mango_glut_src})
-  target_link_libraries(Mango_glut ${GLUT_LIBRARIES})
+  add_library(mango_onglut ${mango_onglut_src})
+  target_link_libraries(mango_onglut ${GLUT_LIBRARIES})
 else()
-  message("GLUT not found, not building Mango_glut")
+  message("GLUT not found, not building mango_onglut")
 endif()
 
 
@@ -65,24 +65,24 @@ find_package(PythonLibs 3.2)
 if(${PYTHONLIBS_FOUND})
   include_directories(${PYTHON_INCLUDE_PATH})
 
-  file(GLOB Mango_py_src "${PROJECT_SOURCE_DIR}/mangopy/*.cpp")
-  add_library(Mango_py ${Mango_py_src})
-  target_link_libraries(Mango_py ${PYTHON_LIBRARIES} Mango_core Mango_draw)
+  file(GLOB mango_py_src "${PROJECT_SOURCE_DIR}/mangopy/*.cpp")
+  add_library(mango_py ${mango_py_src})
+  target_link_libraries(mango_py ${PYTHON_LIBRARIES} mango_core)
 
-  file(GLOB Mango_pygeometry_src "${PROJECT_SOURCE_DIR}/pygeometry/*.cpp")
+  file(GLOB mango_pygeometry_src "${PROJECT_SOURCE_DIR}/pygeometry/*.cpp")
 
-  add_library(Mango_pygeometry SHARED ${Mango_pygeometry_src})
-  set_target_properties(Mango_pygeometry PROPERTIES PREFIX "")
+  add_library(mango_pygeometry SHARED ${mango_pygeometry_src})
+  set_target_properties(mango_pygeometry PROPERTIES PREFIX "")
   if(WIN32)
-     set_target_properties(Mango_pygeometry PROPERTIES SUFFIX ".pyd")
+     set_target_properties(mango_pygeometry PROPERTIES SUFFIX ".pyd")
   endif(WIN32)
-  set_target_properties(Mango_pygeometry PROPERTIES OUTPUT_NAME "Geometry")
-  target_link_libraries(Mango_pygeometry ${PYTHON_LIBRARIES} Mango_core Mango_geometry Mango_py)
+  set_target_properties(mango_pygeometry PROPERTIES OUTPUT_NAME "Geometry")
+  target_link_libraries(mango_pygeometry ${PYTHON_LIBRARIES} mango_core mango_geometry mango_py)
 
 if(${GLUT_FOUND})
   include_directories(${GLUT_INCLUDE_DIR})
   add_executable(mango "${PROJECT_SOURCE_DIR}/mangopy_on_glut/mangopy_on_glut.cpp")
-  target_link_libraries(mango ${GLUT_LIBRARIES} Mango_core Mango_draw Mango_glut Mango_py)
+  target_link_libraries(mango ${GLUT_LIBRARIES} mango_core mango_onglut mango_py)
 else()
   message("GLUT not found, not building the mango executable")
 endif()
@@ -98,15 +98,14 @@ endif()
 if(${PYTHONLIBS_FOUND})
   install(TARGETS mango DESTINATION bin)
 
-  install(TARGETS Mango_pygeometry DESTINATION lib/mangopy/) 
+  install(TARGETS mango_pygeometry DESTINATION lib/mangopy/) 
 
-  file(GLOB Mango_py_samples "${PROJECT_SOURCE_DIR}/../samples_mangopy/mangopy/*.py")
-  install(FILES ${Mango_py_samples} DESTINATION share/mangopy/samples/)
+  file(GLOB mango_py_samples "${PROJECT_SOURCE_DIR}/../samples_mangopy/mangopy/*.py")
+  install(FILES ${mango_py_samples} DESTINATION share/mangopy/samples/)
   
-  install(TARGETS Mango_py DESTINATION lib)
+  install(TARGETS mango_py DESTINATION lib)
 endif()
 
-install(TARGETS Mango_core DESTINATION lib)
-install(TARGETS Mango_geometry DESTINATION lib)
-install(TARGETS Mango_draw DESTINATION lib)
-install(TARGETS Mango_glut DESTINATION lib)
+install(TARGETS mango_core DESTINATION lib)
+install(TARGETS mango_geometry DESTINATION lib)
+install(TARGETS mango_onglut DESTINATION lib)
